2003-10-01  Philippe Elie  <phil.el@wanadoo.fr>

	* configure.in:
	* libop/Makefile.am: new subdir
	* libop/op_events.c: allow to retrieve events file dir through
	  environment variable
	* utils/op_help.c: move parse_events() and parsed_event struct to ...
	* libop/op_parse_event.h:
	* libop/op_parse_event.c: these new files

	* libop/tests/Makefile.am: new tests subdir
	* libop/tests/alloc_counter_tests.c: events mapping to counter nr tests
	* libop/tests/parse_event_tests.c: event parsing tests

2003-10-01  Philippe Elie  <phil.el@wanadoo.fr>

	* libop/op_alloc_counter.c: add forward declaration
	* libop/op_alloc_counter.c: alloc counter in increasing number order,
	  it's less suprising.

2003-10-01  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/tests/db_test.c: if previous tests fails a corrupted samples
	  file can exist in test dir and will be re-used, remove() it.

2003-10-01  John Levon  <levon@movementarian.org>

	* daemon/opd_sfile.c:
	* libabi/op_import.cpp:
	* libop/op_interface.h:
	* libpp/locate_images.h: small cleanups

	* pp/opreport_options.cpp: don't complain about
	"-x -m all"

2003-09-28  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil/op_file.c:
	* libutil/tests/file_tests.c: honor posix "//" filename namespace

2003-09-28  Philippe Elie  <phil.el@wanadoo.fr>

	* libop/op_alloc_counter.h:
	* libop/op_alloc_counter.c: change allocator by a backtracking
	  algorithm walking only through possible solution.

2003-09-26  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/tests/db_test.c: success must be silent
	* dae/oprofiled.c:
	* daemon/oprofiled.c:
	* libutil/op_deviceio.c:
	* libutil/op_deviceio.h: op_open_device(): remove unused parameter
	  fatal

2003-09-26  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil/tests/file_tests.c: Fix some test: in some case the pathname
	  component must be valid since we lstat() them. Fix a segfault due
	  to missing ',' 

2003-09-26  John Levon  <levon@movementarian.org>

	* libdb/tests/Makefile.am: