@@ -3,3 +3,5 @@ Makefile.in
 Makefile
 parse_event_tests
 alloc_counter_tests
+load_events_files_tests
+
