@@ -4,7 +4,7 @@ AM_CPPFLAGS = \
 
 AM_CFLAGS = @OP_CFLAGS@
 
-check_PROGRAMS = parse_event_tests alloc_counter_tests
+check_PROGRAMS = parse_event_tests load_events_files_tests alloc_counter_tests
 
 parse_event_tests_SOURCES = parse_event_tests.c
 parse_event_tests_LDADD = ../libop.a ../../libutil/libutil.a
@@ -12,5 +12,8 @@ parse_event_tests_LDADD = ../libop.a ../../libutil/libutil.a
 alloc_counter_tests_SOURCES = alloc_counter_tests.c
 alloc_counter_tests_LDADD = ../libop.a ../../libutil/libutil.a
 
+load_events_files_tests_SOURCES = load_events_files_tests.c
+load_events_files_tests_LDADD = ../libop.a ../../libutil/libutil.a
 
-TESTS = parse_event_tests alloc_counter_tests
+
+TESTS = parse_event_tests load_events_files_tests alloc_counter_tests
